2001-12-03  Christopher Faylor  <cgf@redhat.com>

	* path.cc (mount_info::conv_to_win32_path): Avoid returning error if
	cygdrive == '/'.
	(mount_info::cygdrive_win32_path): Return 0 if invalid cygdrive path.

2001-11-30  Christopher Faylor  <cgf@redhat.com>

	* debug.cc (makethread): Eliminate unneeded function call.
	* miscfuncs.cc (tls_ix): Predefine.
	* perthread.h (set_reent): Eliminate.
	(get_reent): Ditto.
	* winbase.h (my_tlsalloc): Use global stack base pointer.  Set newly
	allocated location to NULL.
	(my_tlssetvalue): Use global stack base pointer.
	(my_tlsgetvalue): Ditto.

2001-11-27  Christopher Faylor  <cgf@redhat.com>

	* winsup.h: Reorganize to avoid use of experimental stuff.
	* shortcut.cc: Move winsup.h first in include order.

2001-11-27  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din (ualarm): New export.
	* dcrt0.cc (_dll_crt0): Add experimental tls storage declaration.
	(dll_crt0): Ditto.
	* debug.cc (thread_stub): Ditto.
	* thread.cc: Minor cleanup.
	(__pthread_create): Add experimental tls storage declaration.
	* miscfuncs.cc: Define tls index.
	* winsup.h: Declare experimental tls storage.

	* window.cc (alarm): Use old timer return from setitimer.
	(ualarm): New function.  From Alexandr V. Shutko.

2001-11-26  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (libcygwin.a): Use ar commands to build libcygwin.a since
	adding an archive doesn't work the way we want it to.

2001-11-24  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_cygdrive::readdir): Avoid reporting
	inaccessible drives.

2001-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_hstrerror): Allow s == NULL.
	(cygwin_rcmd): Add parameter checking.
	(cygwin_rexec): Ditto.

2001-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_inet_ntoa): Add parameter checking.
	(cygwin_inet_network): Return INADDR_NONE instead of 0 in case of
	EFAULT.
	(cygwin_hstrerror): Add parameter checking.
	(cygwin_rresvport): Ditto.