@@ -1,5 +1,12 @@
 2001-12-03  Christopher Faylor  <cgf@redhat.com>
 
+	* net.cc (cygwin_getsockopt): Allow NULL optval.
+
+	* path.cc (mount_info::read_cygdrive_info_from_registry): Don't write
+	cygdrive to registry if it doesn't exist.
+
+2001-12-03  Christopher Faylor  <cgf@redhat.com>
+
 	* path.cc (mount_info::conv_to_win32_path): Avoid returning error if
 	cygdrive == '/'.
 	(mount_info::cygdrive_win32_path): Return 0 if invalid cygdrive path.
